add more derivation

--- a/10_Oct/1501_熱力学の第１法則.ipynb
+++ b/10_Oct/1501_熱力学の第１法則.ipynb
@@ -5,9 +5,7 @@
     "colab": {
       "name": "1501_熱力学の第１法則.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMLpFugqZYaBfW1v6w8QMI3",
+      "authorship_tag": "ABX9TyNvhvWlLUEs6WITVf7qdBiY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -296,7 +294,7 @@
         "単位は\n",
         "> $\\qquad {\\rm 1\\ J} = {\\rm 1\\ N \\cdot 1\\ m} \\left[= {\\rm 1\\ (kg\\cdot m/s^2) \\cdot 1\\ m}\\right]$\n",
         "\n",
-        "今後は, \n",
+        "今後は,\n",
         "\n",
         ">> - $\\Delta W$: work, 仕事 $\\qquad \\Delta W =W_{\\rm 終状態} - W_{\\rm 始状態}$\n",
         "- $F$: force, 力\n",
@@ -394,7 +392,7 @@
       },
       "source": [
         "$\\require{cancel}$\n",
-        "### $P-V$ グラフ\n",
+        "### P-V グラフ\n",
         "\n",
         "\\begin{align*}\n",
         "\\Delta W_{\\rm out} = P \\Delta V\n",
@@ -465,12 +463,12 @@
         "それでは横軸 $V$ を $\\Delta V$ と分割して足し合わせていきましょう.  \n",
         "($\\Delta V$ を調べる間は $P$ はほぼ変化しないと考えてください)\n",
         "\\begin{align*}\n",
-        "\\Sigma \\Delta W_{\\rm out} \n",
+        "\\Sigma \\Delta W_{\\rm out}\n",
         "&= \\Sigma P \\Delta V.&\n",
         "\\end{align*}\n",
         "ですが, 足し合わせる始めと終わりが必要ですので\n",
         "\\begin{align*}\n",
-        "\\Sigma_{\\rm 状態:0}^{\\rm 状態:1} \\Delta W_{\\rm out} \n",
+        "\\Sigma_{\\rm 状態:0}^{\\rm 状態:1} \\Delta W_{\\rm out}\n",
         "&= \\Sigma_{\\rm 状態:0}^{\\rm 状態:1} P \\Delta V.&\n",
         "\\end{align*}\n",
         "と 状態:0 から 状態:1 まで足し合わせることにします.\n",
@@ -517,7 +515,7 @@
       },
       "source": [
         "\\begin{align*}\n",
-        "\\int_{\\rm 状態:0}^{\\rm 状態:1} {\\rm d} W_{\\rm out} \n",
+        "\\int_{\\rm 状態:0}^{\\rm 状態:1} {\\rm d} W_{\\rm out}\n",
         "&= \\int_{\\rm 状態:0}^{\\rm 状態:1} P {\\rm d} V.&\\\\\n",
         "W_{\\rm out:1} - W_{\\rm out:0} &= \\int_{\\rm 状態:0}^{\\rm 状態:1} P {\\rm d} V.&\n",
         "\\end{align*}\n",
@@ -529,9 +527,9 @@
         "\n",
         ">> - $P\\geqq0$\n",
         "- 状態:0 から状態:1 に変化しとき\n",
-        "  - $\\color{#FF0000}{V_1 \\geqq V_0}$ なら, $W_{\\rm out:1} - W_{\\rm out:0} \n",
+        "  - $\\color{#FF0000}{V_1 \\geqq V_0}$ なら, $W_{\\rm out:1} - W_{\\rm out:0}\n",
         "   \\color{#FF0000}{\\geqq} 0$\n",
-        "  - $\\color{#0000FF}{V_1 \\leqq V_0}$ なら, $W_{\\rm out:1} - W_{\\rm out:0} \n",
+        "  - $\\color{#0000FF}{V_1 \\leqq V_0}$ なら, $W_{\\rm out:1} - W_{\\rm out:0}\n",
         "  \\color{#0000FF}{\\leqq} 0$\n",
         "\n",
         "となります."
@@ -720,7 +718,7 @@
         "\n",
         "熱力学第一法則は\n",
         "\\begin{align*}\n",
-        "\\Delta U \n",
+        "\\Delta U\n",
         "&= \\Delta Q_{\\rm in} + \\Delta W_{\\rm in}&\\\\\n",
         "&= \\Delta Q_{\\rm in} - \\Delta W_{\\rm out}&\\\\\n",
         "&= \\Delta Q_{\\rm in} - P\\Delta V,&\n",
@@ -734,9 +732,9 @@
         "> 注目する系の定積変化 $\\Delta V=0$ では, 吸収される熱量は系の内部エネルギー変化 $\\Delta U $ に等しい\n",
         "\n",
         "つまり\n",
-        " \n",
+        "\n",
         ">> $\\color{#0000FF}{\\Delta Q_{{\\rm in}:V} < 0}$ ならば $\\color{#0000FF}{\\Delta U < 0}$,   \n",
-        ">> $\\color{#FF0000}{\\Delta Q_{{\\rm in}:V} > 0}$ ならば $\\color{#FF0000}{\\Delta U > 0}$, \n",
+        ">> $\\color{#FF0000}{\\Delta Q_{{\\rm in}:V} > 0}$ ならば $\\color{#FF0000}{\\Delta U > 0}$,\n",
         "\n",
         "ということができます. この関係を $n$ mol の単原子理想気体の\n",
         "内部エネルギーを用いて表現すると\n",
@@ -746,6 +744,20 @@
         "\\end{align*}\n",
         "系が吸収する熱量 $\\Delta Q_{{\\rm in}:V}$ によって, 系の温度変化 $\\Delta T$ に変換することができます.  "
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "定積モル比熱 $C_V$ を用いると\n",
+        "\\begin{align*}\n",
+        "\\Delta U &= \\Delta Q_{{\\rm in}:V}\\\\\n",
+        " n \\cancelto{C_V}{\\Big(\\dfrac{3}{2} R\\Big)} \\Delta T &= \\Delta Q_{{\\rm in}:V}\\\\[2mm]\n",
+        " n C_V\\Delta T &= \\Delta Q_{{\\rm in}:V}\n",
+        "\\end{align*}"
+      ],
+      "metadata": {
+        "id": "4oJ9hLK_PkdL"
+      }
     },
     {
       "cell_type": "code",
@@ -907,7 +919,7 @@
         "\\begin{align*}\n",
         "\\Delta U &= \\Delta Q_{\\rm in} + \\Delta W_{\\rm in}&\n",
         "\\end{align*}\n",
-        "理想気体では内部エネルギー $\\Delta U$ が簡潔に表現できて\n",
+        "単原子の理想気体では内部エネルギー $\\Delta U$ が簡潔に表現できて\n",
         "\\begin{align*}\n",
         "\\dfrac{3}{2} n R \\Delta T &= \\Delta Q_{\\rm in} + \\Delta W_{\\rm in}.&\n",
         "\\end{align*}\n",
@@ -917,7 +929,7 @@
         "\\Delta Q_{{\\rm in }:T} & = \\Delta W_{{\\rm out}:T}.&\n",
         "\\end{align*}\n",
         "この結果は\n",
-        "> $\\Delta Q_{\\rm in}>0$ であれば, $\\Delta W_{\\rm out}>0$ \n",
+        "> $\\Delta Q_{\\rm in}>0$ であれば, $\\Delta W_{\\rm out}>0$\n",
         "\n",
         "で\n",
         "\n",
@@ -968,8 +980,8 @@
         "\\Delta U &= \\Delta W_{{\\rm in}:Q}\n",
         "\\end{align*}\n",
         "\n",
-        "- $\\color{#FF0000}{\\Delta W_{{\\rm in}:Q}>0} \\quad \\to \\quad \\color{#FF0000}{\\Delta U>0}$ \n",
-        "- $\\color{#0000FF}{\\Delta W_{{\\rm in}:Q}<0} \\quad \\to \\quad \\color{#0000FF}{\\Delta U<0}$ \n",
+        "- $\\color{#FF0000}{\\Delta W_{{\\rm in}:Q}>0} \\quad \\to \\quad \\color{#FF0000}{\\Delta U>0}$\n",
+        "- $\\color{#0000FF}{\\Delta W_{{\\rm in}:Q}<0} \\quad \\to \\quad \\color{#0000FF}{\\Delta U<0}$\n",
         "\n",
         "断熱変化 $\\Delta Q_{\\rm in}=0$ では, $-\\Delta W_{\\rm in} = \\Delta W_{\\rm out}=P\\Delta V$ から, 体積変化も生じます."
       ]
@@ -980,7 +992,7 @@
         "id": "PEH7korynsIN"
       },
       "source": [
-        "> Q.  教科書 p176 (15.10) の二番目の式が成り立つことを確認してください "
+        "> Q.  教科書 p176 (15.10) の二番目の式が成り立つことを確認してください"
       ]
     },
     {
@@ -1029,7 +1041,7 @@
         "\n",
         "この関係式を始状態(**i**nitial) から 終状態(**f**inal) までのすべての変化をたしあわせると\n",
         "\\begin{align*}\n",
-        "\\dfrac{C_V}{R} \\sum_{i}^{f}\\dfrac{\\Delta{T}}T \n",
+        "\\dfrac{C_V}{R} \\sum_{i}^{f}\\dfrac{\\Delta{T}}T\n",
         "+ \\sum_{i}^{f}\\dfrac{\\Delta{V}}V =0.&\n",
         "\\end{align*}\n",
         "\n",
@@ -1048,7 +1060,7 @@
         "$\\require{cancel}$\n",
         "ここで変化の間隔を短く($\\Delta{T},\\Delta{V}\\to 0$)すると, 定積分の考え方が利用でき\n",
         "\\begin{align*}\n",
-        "\\dfrac{C_V}{R} \\int_{i}^{f}\\dfrac{{\\rm d}{T}}T \n",
+        "\\dfrac{C_V}{R} \\int_{i}^{f}\\dfrac{{\\rm d}{T}}T\n",
         "+ \\int_{i}^{f}\\dfrac{{\\rm d}{V}}V =0&\n",
         "\\end{align*}\n",
         "これを解けば\n",
@@ -1061,7 +1073,7 @@
         "\\left( \\dfrac{T_f}{T_i}\\right)^{\\frac{C_V}{R}} \\cdot \\dfrac{V_f}{V_i}  = 1&\\\\\n",
         "\\left(\n",
         "  \\dfrac{T_f}{T_i}\n",
-        "  \\left(\\dfrac{V_f}{V_i}\\right)^{\\frac{R}{C_V}} \n",
+        "  \\left(\\dfrac{V_f}{V_i}\\right)^{\\frac{R}{C_V}}\n",
         "\\right)^{\\frac{C_V}{R}} &=1&\\\\\n",
         "  \\dfrac{T_f}{T_i}\n",
         "  \\left(\\dfrac{V_f}{V_i}\\right)^{\\frac{R}{C_V}} &=1&\n",
@@ -1079,8 +1091,17 @@
       "source": [
         "比熱比 $\\gamma$ を用いると, $P-V$ の関係は\n",
         "\\begin{align*}\n",
-        "&\\dfrac{P_f V_f^{\\gamma}}{P_i V_i^{\\gamma}} = 1&\\\\\n",
-        "P_f V_f^{\\gamma} &= P_i V_i^{\\gamma} = 一定&\n",
+        "  \\dfrac{n R T_f}{ n R T_i}\n",
+        "  \\left(\\dfrac{V_f}{V_i}\\right)^{\\frac{R}{C_V}}\n",
+        "  &=\n",
+        "  \\dfrac{P_f V_f}{ P_i V_i}\n",
+        "  \\left(\\dfrac{V_f}{V_i}\\right)^{\\frac{R}{C_V}}\n",
+        "  =\n",
+        "  \\dfrac{P_f }{P_i}\n",
+        "  \\left(\\dfrac{V_f}{V_i}\\right)^{\\frac{R}{C_V}+1}\n",
+        "   =1\\\\\n",
+        "\\dfrac{P_f V_f^{\\gamma}}{P_i V_i^{\\gamma}} &= 1\\\\\n",
+        "P_f V_f^{\\gamma} &= P_i V_i^{\\gamma} = 一定\n",
         "\\end{align*}\n",
         "となります."
       ]
@@ -1092,7 +1113,9 @@
       },
       "source": [
         "$$\n",
-        "\\gamma = \\dfrac{R+ C_V}{C_V} = \\dfrac{C_R}{C_V} > 1\n",
+        "\\gamma\n",
+        "= \\dfrac{R}{C_V} +1\n",
+        "= \\dfrac{R+ C_V}{C_V} = \\dfrac{C_P}{C_V} > 1\n",
         "$$"
       ]
     },
@@ -1169,7 +1192,7 @@
         "右辺は一定になる. この式を$P-V$での傾きを調べるために $V$ で微分してみると\n",
         "\\begin{align*}\n",
         "\\dfrac{{\\rm d} (P V)}{{\\rm d} V} &= \\cancelto{0}{\\dfrac{{\\rm d} (nRT)}{{\\rm d} V}}&\\\\\n",
-        "\\dfrac{{\\rm d} P}{{\\rm d} V} V \n",
+        "\\dfrac{{\\rm d} P}{{\\rm d} V} V\n",
         "+ P \\cancelto{1}{\\dfrac{{\\rm d} V}{{\\rm d} V}} &=0&\\\\\n",
         "\\left(\\dfrac{{\\rm d} P}{{\\rm d} V}\\right)_T &= - \\dfrac{P}{V}&\n",
         "\\end{align*}"
@@ -1217,7 +1240,7 @@
         "##### $\\Delta Q =0$ は $\\Delta T = 0$ をつなぐ\n",
         "一般に比熱比 $\\gamma>1$ なので,\n",
         "\\begin{align*}\n",
-        "0> \\left(\\dfrac{{\\rm d} P}{{\\rm d} V}\\right)_T \n",
+        "0> \\left(\\dfrac{{\\rm d} P}{{\\rm d} V}\\right)_T\n",
         ">\b\n",
         "\\left(\\dfrac{{\\rm d} P}{{\\rm d} V}\\right)_Q\n",
         "\\end{align*}\n",
@@ -1317,7 +1340,7 @@
       "source": [
         "$\\require{cancel}$\n",
         "\\begin{align*}\n",
-        "\\Delta U \n",
+        "\\Delta U\n",
         "&= \\cancelto{0}{\\Delta Q_{\\rm in}} - \\cancelto{0}{P} \\Delta V\n",
         "=0\\\\\n",
         "\\Delta U = U_{終状態} -  U_{始状態} &= 0\\\\\n",
