--- a/10_Oct/1404_ファンデルワールスの状態方程式.ipynb
+++ b/10_Oct/1404_ファンデルワールスの状態方程式.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "1404_ファンデルワールスの状態方程式.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOCyhxMNb24sW0ENnw9uscP",
+      "authorship_tag": "ABX9TyMeFhfGE21UKQy5mKm9D3oc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,11 +66,11 @@
         "outputId": "e876dfbd-5124-4588-b381-f7878300679a"
       },
       "source": [
-        "#@title van der Waals equation of state\n",
+        "#@title van der Waals equation of state $P$\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MDUkyxxKA8k\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -96,9 +95,9 @@
         "\\begin{align*}\n",
         "p_{\\rm ideal}V_{\\rm ideal} &= nRT\\\n",
         "&\\begin{cases}\n",
-        "p_{\\rm ideal} > p_{\\rm real}: \n",
-        "&\\quad p_{\\rm real} + a \\dfrac{n}{V} \\dfrac{n}{V} = p_{\\rm ideal}\\\\\n",
-        "V_{\\rm ideal} < V_{\\rm real}: \n",
+        "p_{\\rm ideal} > p_{\\rm real}:\n",
+        "&\\quad p_{\\rm ideal}= p_{\\rm real} + a \\dfrac{n}{V} \\dfrac{n}{V} \\\\\n",
+        "V_{\\rm ideal} < V_{\\rm real}:\n",
         "&\\quad V_{\\rm ideal} + b n = V_{\\rm real}\n",
         "\\end{cases}\n",
         "\\end{align*}\n",
@@ -126,7 +125,7 @@
         "\\begin{align*}\n",
         "T_{\\rm C} = \\dfrac{8a}{27bR} \\ ;\n",
         "&\n",
-        "\\quad \n",
+        "\\quad\n",
         "\\begin{cases}\n",
         "V_{\\rm C} &= 3 nb\\\\\n",
         "p_{\\rm C} &= \\dfrac{a}{27b^2}\n",
