add more explanation.

--- a/11_Nov/1505_エントロピー増大の原理.ipynb
+++ b/11_Nov/1505_エントロピー増大の原理.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "1505_エントロピー増大の原理.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMMdFpJZNQWWlv3NsvfwmmP",
+      "authorship_tag": "ABX9TyOt8BcllaTWDk8GBY0GaDOT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -484,7 +484,7 @@
         "$\\require{cancel}$\n",
         "\\begin{align}\n",
         "m_1 \\bcancel{c_w} \\left( T- T_1 \\right) + m_2 \\bcancel{c_w} \\left( T- T_2 \\right) =0\\\\\n",
-        "T = \\dfrac{m_1 c_w  T_1 + m_2 c_w T_2}{m_1 + m_2} = 50{\\rm {}^{\\circ}C}\n",
+        "T = \\dfrac{m_1 T_1 + m_2 T_2}{m_1 + m_2} = 50{\\rm {}^{\\circ}C}\n",
         "\\end{align}"
       ]
     },
@@ -504,6 +504,37 @@
         "\\Delta S &= \\Delta S_{\\rm A} + \\Delta S_{\\rm B} \\approx 36.39 {\\rm\\ J/K}\n",
         "\\end{align*}"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "例題５に取り組んで下さい。"
+      ],
+      "metadata": {
+        "id": "GuVDs0QVKru1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\\begin{align*}\n",
+        "\\require{cancel}\n",
+        "\\cancelto{0}{\\Delta U}\n",
+        "&= \\Delta Q_{in} + \\Delta W_{in}\n",
+        "= \\Delta Q_{in} - \\Delta W_{out} = \\Delta Q_{in} - p \\Delta V\\\\[2mm]\n",
+        "\\Delta Q &= p \\Delta V\\\\[5mm]\n",
+        "\\Delta S\n",
+        "&= \\int_{i}^{f} \\dfrac{d\\,Q}{T}\n",
+        "= \\int_{V_i}^{V_f} \\dfrac{p\\, d~V}{T}\n",
+        "= \\int_{V_i}^{V_f} \\dfrac{(nRT/V)\\, d~V}{T}\\\\\n",
+        "S_f - S_ i&= nR \\int_{V_i}^{V_f} \\dfrac{d~V}{V}\n",
+        "= nR~\\ln\\dfrac{V_f}{V_i} >0 \\\\[2mm]\n",
+        "S_f > S_i\n",
+        "\\end{align*}\n"
+      ],
+      "metadata": {
+        "id": "zSkfcazHLVGo"
+      }
     }
   ]
 }
