fixed typos and add spaces

--- a/01_Jan/1101_静止流体の圧力.ipynb
+++ b/01_Jan/1101_静止流体の圧力.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "1101_静止流体の圧力",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyM+cZ8q+IoJiA11Pomo0S0y",
+      "authorship_tag": "ABX9TyPRzo1gtolxBwwZI8mmojfM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,7 +104,7 @@
         "圧力(Pressure)の定義\n",
         "\n",
         "$$\n",
-        "P = \\dfrac{F}{S}　\b= \\dfrac{F}{A}　\n",
+        "P = \\dfrac{F}{S}　\b= \\dfrac{F}{A}\n",
         "$$\n",
         "\n",
         "* 力 $F$ は, 接触している面積 $S$ を **垂直に** 押す力です.(概念図参照)\n",
@@ -161,7 +160,7 @@
         "#### 圧力は一点に働く力の源\n",
         "\n",
         "1. 下の画像は無重力の宇宙空間に(ほぼ)静止している水滴です.  \n",
-        "この水滴は周囲からの力を受け同じ大きさの力を受け,  \n",
+        "この水滴は周囲からの同じ大きさの力を四方八方から受け,  \n",
         "一つにまとまりほぼ静止しています.\n",
         "\n",
         "2. この水滴を無限に小さくします。\n",
@@ -228,7 +227,7 @@
         "となる. この考察から圧力は\n",
         "> 単位体積(${\\rm 1m^3}$)あたりのエネルギーの単位\n",
         "\n",
-        "ということができます. \n",
+        "ということができます.\n",
         "<!-- このことから\n",
         ">> 圧力は一点に働く力の源\n",
         "\n",
@@ -252,19 +251,19 @@
         "&\\begin{cases}\n",
         "F_2 &= F_1 \\sin \\theta\\\\\n",
         "F_3 &= F_1 \\cos \\theta\n",
-        "\\end{cases}\\\\\n",
+        "\\end{cases}\\\\[2mm]\n",
         "%\n",
         "&\\begin{cases}\n",
         "P_2 \\cdot AC \\cdot d\n",
         "&= P_1 \\cdot \\cancelto{AC}{AE \\sin \\theta} \\cdot d\\\\\n",
         "P_3 \\cdot CE \\cdot d\n",
         "&= P_1 \\cdot \\cancelto{CE}{AE \\cos \\theta} \\cdot d\n",
-        "\\end{cases}\\\\\n",
+        "\\end{cases}\\\\[2mm]\n",
         "%\n",
         "&\\begin{cases}\n",
         "P_2 &=P_1\\\\\n",
         "P_3 &=P_1\\\\\n",
-        "\\end{cases}\\\\[2mm]\n",
+        "\\end{cases}\\\\[5mm]\n",
         "%\n",
         "&P_1 = P_2 = P_3\n",
         "\\end{align}"
@@ -403,7 +402,7 @@
       "source": [
         "### 高低差による圧力\n",
         "\n",
-        "**重力下** ので *均質な* **静止流体** による影響のみを考えます.  \n",
+        "**重力下** で *均質な* **静止流体** による影響のみを考えます.  \n",
         "深さ、つまり高低差による圧力の原因として考えられるものは,\n",
         "1. 重力\n",
         "2. 流体そのものの質量  ~ 流体の密度\n",
@@ -469,7 +468,7 @@
         "\n",
         "そこで, 水面下に下の図のような仮想的な四角柱を考えてみましょう. (上辺と底辺は水面に対して平行に取ってあります)\n",
         "今考えている水は静止流体であることを考えれば, この仮想的な四角柱は\n",
-        "下方へずれ落ちるでしょう. 実際にはそうなっていません. \n",
+        "下方へずれ落ちるでしょう. 実際にはそうなっていません.\n",
         "\n",
         "---\n",
         "\n",
@@ -479,7 +478,7 @@
         "* 静止流体なので、*水平な方向に対し左右方向の圧力は変化ない*\n",
         "* 静止流体であっても、地上では重力が働いているので **鉛直方向には圧力が変化** する\n",
         "\n",
-        "言えそうです. \n"
+        "言えそうです.\n"
       ]
     },
     {
@@ -540,7 +539,7 @@
         "\\begin{align*}\n",
         "F_2 &= F_1 + W&\\\\\n",
         "P_2\\cdot S_2 &= P_1\\cdot S_1 + M g&\\\\\n",
-        "P_2\\cdot \\cancel{S} \n",
+        "P_2\\cdot \\cancel{S}\n",
         "&= P_1\\cdot \\cancel{S} + \\rho \\cancel{S} h g&\\\\\n",
         "P_2 &= P_1 + \\rho h g\n",
         "\\end{align*}\n",
@@ -671,7 +670,7 @@
         "outputId": "ad9b6467-6401-49a7-efa4-f6e9b2bf6bd7"
       },
       "source": [
-        "#@title 水圧機の動画(通信量注意)\n",
+        "#@title 水圧機の動画\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/4xegpADGUBM\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
@@ -749,13 +748,13 @@
         "上の図のような大小大きさの異なるピストンを考えます.\n",
         "* 小さい方のピストンA の黒いフタの断面積を$a$, この蓋に垂直に働く力を$F$\n",
         "* 大きい方のピストンB の黒いフタ断面積を$b$, この蓋に垂直に働く力を$F'$\n",
-        "  * $a<b$であることは条件から明らかでしょう.\n",
+        "  * $A_{\\rm A} < A_{\\rm B}$ であることは条件から明らかでしょう.\n",
         "\n",
         "これを用いてピストン A,B のそれぞれの\n",
         "フタに働く圧力 $P_{\\rm A}, P_{\\rm B}$ を求めると\n",
         "\n",
         "$$\n",
-        "P_{\\rm A} = \\dfrac{F}{a}, \\qquad P_{\\rm B} = \\dfrac{F'}{b}\n",
+        "P_{\\rm A} = \\dfrac{F}{A_{\\rm A}}, \\qquad P_{\\rm B} = \\dfrac{F'}{A_{\\rm B}}\n",
         "$$\n",
         "\n",
         "となります. 一方パスカルの原理から\n",
@@ -765,19 +764,19 @@
         "$$\n",
         "\\begin{align*}\n",
         "P_{\\rm A}&=P_{\\rm B}&\\\\\n",
-        "\\dfrac{F}{a}&=\\dfrac{F'}{b}\n",
+        "\\dfrac{F}{A_{\\rm A}}&=\\dfrac{F'}{A_{\\rm B}}\n",
         "\\end{align*}\n",
         "$$\n",
         "これをさらに変形し, $F'$ についてまとめると\n",
         "$$\n",
         "\\begin{align*}\n",
-        "F' = \\dfrac{b}{a}F\n",
+        "F' = \\dfrac{A_{\\rm B}}{A_{\\rm A}}F\n",
         "\\end{align*}\n",
         "$$\n",
-        "ここで断面積の関係 $a<b$ から $1<\\frac{b}{a}$ なので\n",
+        "ここで断面積の関係 $a<b$ から $1<\\dfrac{A_{\\rm B}}{A_{\\rm A}}$ なので\n",
         "$$\n",
         "\\begin{align*}\n",
-        "F' &= \\dfrac{b}{a}F > F&\\\\\n",
+        "F' &= \\dfrac{A_{\\rm B}}{A_{\\rm A}}F > F&\\\\\n",
         "F' &> F&\n",
         "\\end{align*}\n",
         "$$\n",
