--- a/01_Jan/1103_揚力.ipynb
+++ b/01_Jan/1103_揚力.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "1103_揚力",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNSAC2xBa/Fia1kVxcUJhew",
+      "authorship_tag": "ABX9TyP0x/1vX3vj5Pmvn6TPg0eu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,7 +92,7 @@
         "id": "XSADmkUo5swO"
       },
       "source": [
-        "- 翼の上部(top)の流速$v_{t}$は、下部(low)の流速$v_{l}$よりも、早くなっています: \n",
+        "- 翼の上部(top)の流速$v_{t}$は、下部(low)の流速$v_{l}$よりも、早くなっています:\n",
         "\\begin{align}\n",
         "v_{t}>v_{l}\n",
         "\\end{align}\n",
@@ -103,7 +102,7 @@
         "  流線上の下部の圧力$p_{l}$で、差が生じます:\n",
         "  \\begin{align}\n",
         "  p_{t}<p_{l}\n",
-        "  \\end{align} "
+        "  \\end{align}"
       ]
     },
     {
@@ -156,7 +155,7 @@
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/rCpZpKZLz14?start=227\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -187,21 +186,24 @@
         "P_{initial}&=\n",
         "\\begin{cases}\n",
         "p_t + \\dfrac{1}{2} \\rho v_t^2+\\rho g h_t \\\\\n",
-        "p_l + \\dfrac{1}{2} \\rho v_l^2+\\rho g h_l \n",
+        "p_l + \\dfrac{1}{2} \\rho v_l^2+\\rho g h_l\n",
         "\\end{cases}\n",
         "\\end{align}\n",
         "\n",
         "翼が充分薄いとし$(h_t\\approx h_l)$、上式を引けば\n",
         "\\begin{align}\n",
+        "\\require{cancel}\n",
         "0&=\n",
         "\\left(p_t -p_l\\right)\n",
-        "+ \\dfrac{\\rho}{2}\\left(v_t^2-v_t^2\\right)\\\\[1mm]\n",
+        "+ \\dfrac{\\rho}{2}\\left(v_t^2-v_l^2\\right)\n",
+        "+ \\rho g \\cancelto{0}{\\left(h_t - h_l\\right)}\n",
+        "\\\\[1mm]\n",
         "p_l - p_t\n",
         "&=\n",
-        "\\dfrac{\\rho}{2}\\left(v_t^2-v_t^2\\right)\\\\[1mm]\n",
+        "\\dfrac{\\rho}{2}\\left(v_t^2-v_l^2\\right)\\\\[1mm]\n",
         "\\Delta p_{lt}\n",
         "&=\n",
-        "\\dfrac{\\rho}{2}\\left(v_t^2-v_t^2\\right)\n",
+        "\\dfrac{\\rho}{2}\\left(v_t^2-v_l^2\\right)\n",
         "\\end{align}\n"
       ]
     },
@@ -213,7 +215,7 @@
       "source": [
         "ここで、薄い翼の面積を上部下部とも $A$ とすれば $F=pA$ より\n",
         "\\begin{align}\n",
-        "F_{L} = \\Delta p_{lt} A \n",
+        "F_{L} = \\Delta p_{lt} A\n",
         "&=\n",
         "\\dfrac{\\rho}{2}\\left(v_t^2-v_t^2\\right) A\n",
         "\\end{align}"
@@ -225,7 +227,7 @@
         "id": "MxLOaLqYPPrf"
       },
       "source": [
-        "無限遠方では, $v_t,v_l$ とも 気流の速さ(翼の速さ)に比例すると考えれば\n",
+        "無限遠方では, $v_t,v_l$ とも 気流の速さ(翼の速さ) $v$ に比例すると考えれば\n",
         "\\begin{cases}\n",
         "v_t &= c_t v\\\\\n",
         "v_l &= c_l v\n",
@@ -253,7 +255,7 @@
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/SiOiVHUEYao\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
