fixed missing youtube links

--- a/01_Jan/1104_粘性抵抗と慣性抵抗.ipynb
+++ b/01_Jan/1104_粘性抵抗と慣性抵抗.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "1104_粘性抵抗と慣性抵抗",
       "provenance": [],
-      "authorship_tag": "ABX9TyNCDD/zbyoHl+hq39o2/Qgn",
+      "authorship_tag": "ABX9TyM9pWCWUvcIS9ifrLZSMNp1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/UVcyea3ZH54\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "data": {
@@ -110,7 +110,7 @@
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/cUTkqZeiMow\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -142,7 +142,7 @@
         "\n",
         "深さによって変化する様子を捉えていることがわかります。\n",
         "\\begin{align}\n",
-        "\\tau = \\eta \\dfrac{{\\rm d}v}{{\\rm d} y} \n",
+        "\\tau = \\eta \\dfrac{{\\rm d}v}{{\\rm d} y}\n",
         "= \\eta \\lim_{\\Delta y \\to 0}  \\dfrac{\\Delta v}{\\Delta y}\n",
         "\\end{align}\n"
       ]
@@ -254,28 +254,58 @@
         },
         "cellView": "form",
         "id": "MxDe5INgNfgV",
-        "outputId": "2bb1f20b-99c6-4319-be3e-f37783f52b64"
+        "outputId": "49ba1dd1-b652-45f1-dd4f-024ba282b570"
       },
       "source": [
         "#@title 渦の発生\n",
-        "%%html \n",
-        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MSaYzDKG5QU\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+        "%%html\n",
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/FEovsHHM_o0?si=ZrNzWWnsUIuMW0kl\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/html": [
-              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MSaYzDKG5QU\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
-            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/FEovsHHM_o0?si=ZrNzWWnsUIuMW0kl\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>\n"
             ]
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title 実験: 迎え角の影響と渦の発生\n",
+        "%%html\n",
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/SiOiVHUEYao\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "snOxDfNvD5uw",
+        "outputId": "24b14e2a-ad3e-453c-f21b-e5833cf3bc08",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/SiOiVHUEYao\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n"
+            ]
+          },
+          "metadata": {}
         }
       ]
     },
@@ -288,7 +318,8 @@
         "$\\require{cancel}$\n",
         "教科書 p128 図11.17 を参考に\n",
         "\\begin{align}\n",
-        "p_A + \\dfrac{1}{2} \\rho \\cancelto{0}{v_A^2} = p_{\\infty} + \\dfrac{1}{2} \\rho{v^2}\n",
+        "p_A + \\dfrac{1}{2} \\rho \\cancelto{0}{v_A^2} &= p_{\\infty} + \\dfrac{1}{2} \\rho{v^2}\\\\[2mm]\n",
+        "p_A - p_{\\infty} &=  \\dfrac{1}{2} \\rho{v^2}\n",
         "\\end{align}\n",
         "より、作用する流体の抵抗は\n",
         "\\begin{align}\n",
